@@ -1,3 +1,7 @@
+Sun Oct  1  2:54:00 2000  Corinna Vinschen <corinna@vinschen.de>
+
+	* include/ntdef.h: New file.
+
 Fri Aug 18 17:17:00 2000  Corinna Vinschen <corinna@vinschen.de>
 
 	* include/winnt.h:Add enums for TokenRestrictedSids and TokenSessionId
